--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,10 @@ dependencies:
   firebase_core: ^2.16.0
   mask_text_input_formatter: ^2.5.0
   pin_code_fields: ^8.0.1
+  google_fonts: ^6.1.0
+  firebase_storage: 11.2.7
+  image_picker: ^1.0.4
+  cloud_firestore: ^4.9.3
 
 
 dev_dependencies:
