--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   firebase_storage: 11.2.7
   image_picker: ^1.0.4
   cloud_firestore: ^4.9.3
+  geolocator: ^8.2.0
+  geocoding: ^2.0.4
 
 
 dev_dependencies:
