--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,11 +55,21 @@ dependencies:
   geolocator: ^8.2.0
   geocoding: ^2.0.4
   share_plus: ^7.2.1
+  rename_app: ^1.3.1
+  firebase_remote_config: ^4.2.7
+  
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  change_app_package_name: ^1.1.0
+
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: "assets/app_logo.png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
