--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+2
 
 environment:
   sdk: '>=3.1.2 <4.0.0'
@@ -57,6 +57,9 @@ dependencies:
   share_plus: ^7.2.1
   rename_app: ^1.3.1
   firebase_remote_config: ^4.2.7
+  razorpay_flutter: ^1.3.5
+  flutter_dotenv: ^5.1.0
+  store_redirect: ^2.0.1
   
 
 
@@ -65,6 +68,7 @@ dev_dependencies:
     sdk: flutter
   flutter_launcher_icons: ^0.13.1
   change_app_package_name: ^1.1.0
+  package_info_plus: any
 
 flutter_launcher_icons:
   android: true
@@ -92,6 +96,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - .env
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
